# hello_tui

./: ALIASES_README.md  Cargo.toml  FORMATTING_IMPROVEMENTS.md  LICENSE  README.md  TestComp.jsx  USAGE.md  alignment_test.txt  backup.txt  demo_output.txt  edit  edit.sh  editor-demo  install_system_wide.sh  quick-edit  sample.js  sample.rs  sample.txt  sample.txt.edited  setup_aliases.sh  test.js  test_js.js  test_linting.rs  text-editor  text-editor-enhanced
locales/: de-DE.ftl  en-US.ftl  es-ES.ftl  fr-FR.ftl
src/: cursor.rs  edit.rs  editor_demo.rs  file_demo.rs  file_io.rs  i18n.rs  interactive_editor.rs  iocraft_components.rs  iocraft_file.rs  keys.rs  lib.rs  linter.rs  main.rs  mouse.rs  quick_editor.rs  render.rs  syntax.rs
